Add jspdf.min.js to web_accessible_resources in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["Button.png"],
+      "resources": ["Button.png","jspdf.min.js"],
       "matches": ["https://*.youtube.com/*"]
     }
   ],
