--- a/package.json
+++ b/package.json
@@ -1,12 +1,32 @@
 {
-  "scripts": {
-    "build": "webpack"
-  },
-  "dependencies": {
-    "jspdf": "^2.5.1"
-  },
-  "devDependencies": {
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  }
+ "scripts": {
+  "dev": "webpack --watch --config webpack.dev.js",
+  "build": "webpack --config webpack.prod.js"
+ },
+ "dependencies": {
+  "jspdf": "^2.5.1",
+  "react": "^17.0.2",
+  "react-dom": "^17.0.2",
+  "react-icons": "^5.2.1",
+  "style-loader": "^3.3.1"
+ },
+ "devDependencies": {
+  "@babel/core": "^7.24.7",
+  "@babel/preset-env": "^7.24.7",
+  "@babel/preset-react": "^7.16.5",
+  "@svgr/webpack": "^8.1.0",
+  "autoprefixer": "^10.4.19",
+  "babel-loader": "^8.3.0",
+  "copy-webpack-plugin": "^10.2.0",
+  "css-loader": "^6.5.1",
+  "file-loader": "^6.2.0",
+  "postcss": "^8.4.38",
+  "postcss-loader": "^8.1.1",
+  "tailwindcss": "^3.4.4",
+  "terser-webpack-plugin": "^5.3.10",
+  "webpack": "^5.92.1",
+  "webpack-cli": "^4.10.0",
+  "webpack-dev-server": "^5.0.4",
+  "webpack-merge": "^5.8.0"
+ }
 }
